fix skip to content not visible

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -77,7 +77,7 @@ a {
   background: $accent-color;
   font-size: 1.125rem;
   color: $white-color;
-  z-index: 99;
+  z-index: 100;
 
   &:focus {
     top: 0.5em;
